--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -11,7 +11,7 @@ jobs:
     name: Terraform project
     runs-on: ubuntu-latest
     env:
-      TF_ROOT: terraformec2/
+      TF_ROOT: dev/
       # If you're using Terraform Cloud/Enterprise and have variables stored on there
       # you can specify the following to automatically retrieve the variables:
       #   INFRACOST_TERRAFORM_CLOUD_TOKEN: ${{ secrets.TFC_TOKEN }}
